[package]
name = "rjmespath"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "jmespath.rs Python binding"
license = "MIT"
repository = "https://github.com/messense/rjmespath-py"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rjmespath"
crate-type = ["cdylib"]

[dependencies]
jmespath = { git = "https://github.com/messense/jmespath.rs.git", branch = "clippy", features = ["sync"] }
pyo3 = { version = "0.13.2", features = ["abi3-py36", "extension-module"] }
