[package]
name = "rjmespath"
version = "0.2.6"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "jmespath.rs Python binding"
license = "MIT"
repository = "https://github.com/messense/rjmespath-py"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rjmespath"
crate-type = ["cdylib"]

[dependencies]
jmespath = { version = "0.3.0", features = ["sync", "specialized"] }
pyo3 = { version = "0.16.5", features = ["abi3-py37", "extension-module"] }
